--- a/views/read_match.html
+++ b/views/read_match.html
@@ -68,8 +68,8 @@
               
                     <span style='float:right'>
                         <a href="/match" class="btn btn-success">목록</a>
-                        <a href="/match/edit" class="btn btn-success">수정</a>
-                        <a href="" class="btn btn-success">삭제</a>
+                        <a id="editButton" class="btn btn-success">수정</a>
+                        <a href="/match/delete" class="btn btn-success">삭제</a>
                         <a href="/match/write" class="btn btn-success">글쓰기</a>
                     </span>
             </table>
@@ -158,9 +158,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
+      document.addEventListener('DOMContentLoaded', function () {
         checkAuthentication(); // 페이지 로드 시 토큰 확인
         getComment(); // 페이지 로드 시 댓글 로드
+
+        // 매치 ID를 가져와서 수정 버튼의 href 속성을 설정
+        const matchId = window.location.pathname.split('/').pop();
+        const editButton = document.getElementById('editButton');
+        if (editButton) {
+          editButton.href = `/match/edit/${matchId}`;
+        }
       });
 
       // 사용자의 인증 여부를 확인하는 함수
