--- a/views/edit_match.html
+++ b/views/edit_match.html
@@ -4,26 +4,40 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"/>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
-    <title>Edit Match - PangPang</title>
-  </head>
-
-  <body>
-    <!-- 네비게이션바 -->
-    <div id='content'></div>
-    
-    <!--빵 부스러기 (Breadcrumb)-->
-    <main class="mt-3 pt-1">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12">
-            <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
-          </div> 
-        </div>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"/>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+  <title>PangPang</title>
+  <script>      
+    fetch('/navbar')
+          .then(response => response.text())
+          .then(data => {
+              document.getElementById("content").innerHTML = data;
+              // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
+              const token = sessionStorage.getItem('토큰');
+              if (token) {
+                  document.getElementById("logoutButton").style.display = "block";
+              } else {
+                  document.getElementById("logoutButton").style.display = "none";
+              }
+          })
+          .catch(error => console.error('Error:', error));
+  </script>
+</head>
+<body>
+  <!-- 네비게이션바 -->
+  <div id='content'></div>
+  
+  <!--빵 부스러기 (Breadcrumb)-->
+  <main class="mt-3 pt-1">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
+        </div> 
       </div>
-    </main>
+    </div>
+  </main>
 
     <!--사이드바 -->
     <div id="page-wrapper">
