--- a/views/login.html
+++ b/views/login.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
     <title>PangPang</title>
     <style>
-        .logincontainer {
-          background-color: #fff;
+        .form-container {
+          
           padding: 40px;
           border-radius: 8px;
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-          width: 600px;
+          width: 500px;
           text-align: center;
           margin: auto;
+          border: 3px solid #006f3e;
         }
 
         .form-signin {
@@ -31,21 +32,30 @@
         }
 
         .form-signin .form-floating:focus-within {
-          z-index: 2;
+          z-index: 1;
         }
 
-        .form-signin input[type="id"] {
+        .form-signin input[type="text"] {
           margin-bottom: -1px;
           border-bottom-right-radius: 0;
           border-bottom-left-radius: 0;
+          border: 1px solid #006F3E;
         }
 
         .form-signin input[type="password"] {
           margin-bottom: 10px;
           border-top-left-radius: 0;
           border-top-right-radius: 0;
+          border: 1px solid #006F3E;
         }
-
+        .form-floating label {
+          position: absolute;
+          top: -8px; 
+          left: 0;
+          transition: top 0.2s, font-size 0.1s;
+          
+          padding: 0 5px;
+        }
         .invalid-feedback {
           display: none;
           width: 100%;
@@ -78,9 +88,18 @@
     </style>
     <script>      
       fetch('/navbar')
-        .then(response => {return response.text()})
-          .then(data => {document.getElementById("content").innerHTML = data;})
-          .catch(error => console.error('Error:', error));
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("content").innerHTML = data;
+                // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
+                const token = sessionStorage.getItem('토큰');
+                if (token) {
+                    document.getElementById("logoutButton").style.display = "block";
+                } else {
+                    document.getElementById("logoutButton").style.display = "none";
+                }
+            })
+            .catch(error => console.error('Error:', error));
     </script>
   </head>
 
@@ -99,12 +118,20 @@
         </div>
       </div>
     </main>
+    <hr class="my-4" style="height: 3px; background-color: #006f3e;">
 
-    <main class="logincontainer">
-      <h1 class="h3 mb-3 fw-normal">반갑습니다!</h1>
+    <br/>
+    <br/>
+    <br/>
+
+    <main class="form-container">
+      <h1 class="h3 mb-3 fw-normal" style="font-weight: bold;">로그인</h1>
+      <br/>
+      <br/>
+      <main class="form-signin">
       <form action="/users/login" method="POST">
         <div class="form-floating">
-            <input type="id" class="form-control" id="floatingID" placeholder="" required>
+            <input type="text" class="form-control" id="floatingID" placeholder="" required>
             <label for="floatingID">ID</label>
         </div>
 
@@ -112,13 +139,17 @@
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
             <label for="floatingPassword">Password</label>
         </div>
-
-        <button class="loginbutton" type="submit">로그인하기</button>
+        <br/>
+        <br/>
         
+        <button class="loginbutton" type="submit">로그인하기</button>
+        <br/>
+        <br/>
     </form>
-    <div><a href="/users/join">회원가입</a></div>
+    <div style="display: flex; flex-direction: column;">
+      <a href="/users/join">회원가입</a></div>
   </main>
-  
+</main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
   <script>
