--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,67 +1,75 @@
-<!-- 네비게이션바/ Header 시작 -->
+<!-- navbar.html -->
+
 <nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
     <div class="container">
-    <a class="navbar-brand" href="/">팡팡</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <a class="navbar-brand" href="/">팡팡</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarsFurni">
-        <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item">
-                <div class="dropdown">
-                <a class="nav-link" href="/match">매치</a>
-                <ul class="dropdown-content">
-                    <li><a class="nav-link" href="/match">전체 매치</a></li>
-                    <li><a class="nav-link" href="/match/write">매치 게시물 작성</a></li>
-                    <li><a class="nav-link" href="/info/stadium">경기장 정보</a></li>
-                </ul>
-                </div>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown">
-                <a class="nav-link" href="/community">커뮤니티</a>
-                <ul class="dropdown-content">
-                    <li><a class="nav-link" href="/community/popular">인기 게시판</a></li>
-                    <li><a class="nav-link" href="/community/daily">일일 게시판</a></li>
-                    <li><a class="nav-link" href="/community/equipment">장비 게시판</a></li>
-                    <li><a class="nav-link" href="/community/tip">꿀팁 게시판</a></li>
-                    <li><a class="nav-link" href="/community/market">장터 게시판</a></li>
-                    <li><a class="nav-link" href="/community/promotion">홍보 게시판</a></li>
-                </ul>
-                </div>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown">
-                <a class="nav-link" href="/info">교내대회</a>
-                <ul class="dropdown-content">
-                    <li><a class="nav-link" href="/info/soccer">축구</a></li>
-                    <li><a class="nav-link" href="/info/hockey">하키</a></li>
-                    <li><a class="nav-link" href="/info/yeonchon">연촌체전</a></li>
-                </ul>
-                </div>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown">
-                <a class="nav-link" href="/help/notices">도움말</a>
-                <ul class="dropdown-content">
-                    <li><a class="nav-link" href="/help/notices">공지사항</a></li>
-                    <li><a class="nav-link" href="/help/qna">Q&A</a></li>
-                    <li><a class="nav-link" href="/help/faq">FAQ</a></li>
-                </ul>
-                </div>
-            </li>
-        </ul>
-        <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li><a class="nav-link" href="/users"><i class="bi bi-person-fill"></i></a></li>
-        </ul>
-        <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li>
-                <button onclick="sessionStorage.removeItem('토큰'); location.href = '/';">
-                    <i class="bi bi-box-arrow-right"></i>
-                    로그아웃
-                </button>
-            </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarsFurni">
+            <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link" href="/match">매치</a>
+                        <ul class="dropdown-content">
+                            <li><a class="nav-link" href="/match">전체 매치</a></li>
+                            <li><a class="nav-link" href="/match/write">매치 게시물 작성</a></li>
+                            <li><a class="nav-link" href="/info/stadium">경기장 정보</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link" href="/community">커뮤니티</a>
+                        <ul class="dropdown-content">
+                            <li><a class="nav-link" href="/community/popular">인기 게시판</a></li>
+                            <li><a class="nav-link" href="/community/daily">일일 게시판</a></li>
+                            <li><a class="nav-link" href="/community/equipment">장비 게시판</a></li>
+                            <li><a class="nav-link" href="/community/tip">꿀팁 게시판</a></li>
+                            <li><a class="nav-link" href="/community/market">장터 게시판</a></li>
+                            <li><a class="nav-link" href="/community/promotion">홍보 게시판</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link" href="/info">교내대회</a>
+                        <ul class="dropdown-content">
+                            <li><a class="nav-link" href="/info/soccer">축구</a></li>
+                            <li><a class="nav-link" href="/info/hockey">하키</a></li>
+                            <li><a class="nav-link" href="/info/yeonchon">연촌체전</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link" href="/help/notices">도움말</a>
+                        <ul class="dropdown-content">
+                            <li><a class="nav-link" href="/help/notices">공지사항</a></li>
+                            <li><a class="nav-link" href="/help/qna">Q&A</a></li>
+                            <li><a class="nav-link" href="/help/faq">FAQ</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+            
+            <!-- 로그인 버튼 -->
+            <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5" id="loginButton">
+                <li><a class="nav-link" href="/users"><i class="bi bi-person-fill"></i></a></li>
+            </ul>
+            
+            <!-- 로그아웃 버튼 -->
+            <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5" id="logoutButton" style="display: none;">
+                <li>
+                    <button onclick="sessionStorage.removeItem('토큰'); location.href = '/';">
+                        <i class="bi bi-box-arrow-right"></i>
+                        로그아웃
+                    </button>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
+
+
