--- a/views/signup.html
+++ b/views/signup.html
@@ -11,12 +11,13 @@
   <style>
     .joincontainer {
       background-color: #fff;
-      padding: 15px;
+      padding: 70px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       width: 600px;
       text-align: center;
       margin: auto;
+      border: 3px solid #006f3e;
     }
 
     h2 {
@@ -28,7 +29,7 @@
       padding: 10px;
       margin: 8px 0;
       box-sizing: border-box;
-      border: 1px solid #ccc;
+      border: 1px solid #006F3E;
       border-radius: 4px;
     }
 
@@ -77,9 +78,12 @@
       </div>
     </div>
   </main>
-
+  <hr class="my-4" style="height: 3px; background-color: #006f3e;">
+  <br/>
+  <br/>
   <div class="joincontainer">
     <h2>회원가입</h2>
+    <br>
     <form action="/users/join" method="post">
       <label for="username">사용자명</label>
       <input type="text" id="username" name="username" required>
@@ -100,6 +104,9 @@
       <button type="submit" value="signup" id="signupButton" disabled>가입하기</button>
     </form>
   </div>
+  <br>
+  <br>
+  <br>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script>
     document.getElementById('userid').addEventListener('input', function() {
