--- a/views/stadium.html
+++ b/views/stadium.html
@@ -25,11 +25,103 @@
             })
             .catch(error => console.error('Error:', error));
     </script>
+    <style>
+      .sport_content{
+        margin-left: 200px; /* 좌측 마진 */
+        margin-right: 200px; /* 우측 마진 */
+      }
+
+      .table_wrap table{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border: 1px solid #006f3e;
+        border-collapse: collapse; /* 테이블 셀 경계를 겹치도록 설정 */
+        width: 100%;
+        border-spacing: 0;
+        table-layout: fixed;
+        border-right: 1px solid #006f3e;
+        
+      }
+      
+      th, td{
+        border: 1px solid #006f3e;
+      }
+
+      .s_list{
+        display: flex;
+        margin-bottom: 70px;
+        border: 2px solid #006f3e;
+        border-radius: 10px;
+        padding: 50px;
+        padding-bottom: 20px;
+      }
+      .btn {
+        background-color: #006f3e;
+        color: white;
+        padding: 10px 15px;
+        margin-top: 10px;
+        margin-right: 5px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        
+      }
+      
+      .s_inner {
+    
+        margin-left: 30px; /* 이미지와 표 사이 여백 */
+      }
+      .btn_area {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 20px; /* 버튼과 내용 사이 여백 */
+      }
+      .category{
+        text-align: center;
+      }
+      .content_tit {
+        font-weight: bold; /* 글씨를 두껍게 설정 */
+        font-size: 20px;
+      }
+
+      .btn-custom {
+        font-size: 20px;
+        background-color: white;
+        color: #006f3e;
+        padding: 10px 15px;
+        margin-top: 10px;
+        margin-left: 15px;
+        border-radius: 4px;
+        cursor: pointer;
+        text-decoration: none;
+        border: 2px solid #006f3e;
+      }
+      .btn-custom:hover {
+        color: white;
+        background-color: #006f3e;
+        
+      }
+      .btn-on{
+        font-size: 20px;
+        color: white;
+        background-color: #006f3e;
+        padding: 10px 15px;
+        margin-top: 10px;
+        margin-left: 15px;
+        border-radius: 4px;
+        cursor: pointer;
+        text-decoration: none;
+        border: 2px solid #006f3e;
+      }
+
+      
+    </style>
   </head>
   <body>
     <!-- 네비게이션바 -->
     <div id='content'></div>
-
+    
+    
     <!--빵 부스러기 (Breadcrumb)-->
     <main class="mt-3 pt-1">
       <div class="container-fluid">
@@ -42,6 +134,7 @@
       </div>
     
     </main>
+    
 
     <!--사이드바 -->
     <div id="page-wrapper">
@@ -57,8 +150,223 @@
         </ul>
       </div>
       <hr class="my-4" style="height: 3px; background-color: #006f3e;">
-
-    <p>경기장 정보 안내 페이지</p>
+      <br>
+      <br>
+      <div class="category">
+        <a href="/stadium" class="btn-on">축구장</a>
+        <a href="/stadium/baseball" class="btn-custom">야구장</a>
+        <a href="/stadium/tennis" class="btn-custom">테니스장</a>
+        <a href="/stadium/futsal" class="btn-custom">풋살장</a>
+        <a href="/stadium/foot" class="btn-custom">족구장</a>
+        <a href="/stadium/all" class="btn-custom">다목적구장</a>
+      </div>
+      <br>
+      <h3 class="text-center mt-5 fw-bold ">축구장</h3>
+      <br>
+      <!--경기장 정보-->
+      <div class="sport_content">
+        <!-- s_list -->
+        <div class="s_list">
+          <div class="img_area">
+            <img src="https://reservation.nowonsc.kr/images/sub/list_img01.jpg" alt="마들스타디움">
+          </div>
+          <div class="s_inner">
+            <p class="content_tit">마들스포츠타운 축구장</p>
+            <!-- table_wrap -->
+            <div class="table_wrap">
+              <table>
+                <colgroup>
+                  <col class="col3">
+                  <col>
+                  <col class="col3">
+                  <col>
+                </colgroup>
+                <tbody>
+                  <tr>
+                    <th scope="row">주소</th>
+                    <td colspan="3">(01770) 노원구 덕릉로 450</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">전화</th>
+                    <td>02)2289-6855</td>
+                    <th scope="row">운영시간</th>
+                    <td>06:00 ~ 22:00</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">면적</th>
+                    <td colspan="3">층수 : 지상 연면적:8436㎡</td>
+                    <!--<th scope="row">주차장</th>
+                    <td>248대</td>-->
+                  </tr>
+                  <tr>
+                    <th scope="row">주요시설</th>
+                    <td colspan="3">조명탑, 관람석, 관리사무소</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- //table_wrap -->
+            <div class="btn_area">
+              <a href="https://reservation.nowonsc.kr/sports/reserve_date?cate1=7&amp;cate2=12" class="btn">대관신청</a>
+              <a href="https://reservation.nowonsc.kr/sports/reserve_state?cate1=7&amp;cate2=12" class="btn">대관현황</a>
+              <a href="https://reservation.nowonsc.kr/sports/soccer_use?cate1=7&amp;cate2=16" class="btn">이용안내</a>
+            </div>
+          </div>
+        </div>
+        <!-- //s_list -->
+        <!-- s_list -->
+        <div class="s_list">
+          <div class="img_area">
+            <img src="https://reservation.nowonsc.kr/images/sub/list_img02.jpg" alt="초안산">
+          </div>
+          <div class="s_inner">
+            <p class="content_tit">초안산스포츠타운 축구장</p>
+            <!-- table_wrap -->
+            <div class="table_wrap">
+              <table>
+                <colgroup>
+                  <col class="col3">
+                  <col>
+                  <col class="col3">
+                  <col>
+                </colgroup>
+                <tbody>
+                  <tr>
+                    <th scope="row">주소</th>
+                    <td colspan="3">(01866)노원구 마들로5가길 113</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">전화</th>
+                    <td>02)2289-6855</td>
+                    <th scope="row">운영시간</th>
+                    <td>06:00 ~ 22:00</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">면적</th>
+                    <td colspan="3">층수 : 지상 연면적:6,630㎡</td>
+                    <!--<th scope="row">주차장</th>
+                    <td>64대</td>-->
+                  </tr>
+                  <tr>
+                    <th scope="row">주요시설</th>
+                    <td colspan="3">조명탑, 관람석, 조깅트랙</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- //table_wrap -->
+            <div class="btn_area">
+              <a href="https://reservation.nowonsc.kr/sports/reserve_date?cate1=7&amp;cate2=13" class="btn">대관신청</a>
+              <a href="https://reservation.nowonsc.kr/sports/reserve_state?cate1=7&amp;cate2=13" class="btn ">대관현황</a>
+              <a href="https://reservation.nowonsc.kr/sports/soccer_use?cate1=7&amp;cate2=17" class="btn">이용안내</a>
+            </div>
+          </div>
+        </div>
+        <!-- //s_list -->
+        <!-- s_list -->
+        <div class="s_list">
+          <div class="img_area">
+            <img src="https://reservation.nowonsc.kr/images/sub/list_img03.jpg" alt="불암산">
+          </div>
+          <div class="s_inner">
+            <p class="content_tit">불암산스포츠타운 축구장</p>
+            <!-- table_wrap -->
+            <div class="table_wrap">
+              <table>
+                <colgroup>
+                  <col class="col3">
+                  <col>
+                  <col class="col3">
+                  <col>
+                </colgroup>
+                <tbody>
+                  <tr>
+                    <th scope="row">주소</th>
+                    <td colspan="3">(01793) 노원구 중계로 36</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">전화</th>
+                    <td>02)2289-6855</td>
+                    <th scope="row">운영시간</th>
+                    <td>06:00 ~ 22:00</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">면적</th>
+                    <td colspan="3">층수 : 지상 연면적:6825㎡</td>
+                    <!--<th scope="row">주차장</th>
+                    <td>248대</td>-->
+                  </tr>
+                  <tr>
+                    <th scope="row">주요시설</th>
+                    <td colspan="3">조명탑, 관람석, 관리사무소</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- //table_wrap -->
+            <div class="btn_area">
+              <a href="https://reservation.nowonsc.kr/sports/reserve_date?cate1=7&amp;cate2=14" class="btn">대관신청</a>
+              <a href="https://reservation.nowonsc.kr/sports/reserve_state?cate1=7&amp;cate2=14" class="btn ">대관현황</a>
+              <a href="https://reservation.nowonsc.kr/sports/soccer_use?cate1=7&amp;cate2=15" class="btn">이용안내</a>
+            </div>
+          </div>
+        </div>
+        <!-- //s_list -->
+        
+        <!-- 2022-04-11 신규 센터 수락산스포츠타운 추가 -->
+        <!-- s_list -->
+        
+        <!-- 2022-11-16 신규 센터 수락산스포츠타운 오픈(12월부터 대관예약) -->
+        
+        <div class="s_list">
+          <div class="img_area">
+            <img src="https://reservation.nowonsc.kr/images/sub/list_img_football.png" width="250" height="180" alt="수락산축구장">
+          </div>
+          <div class="s_inner">
+            <p class="content_tit">수락산스포츠타운 축구장</p>
+            <!-- table_wrap -->
+            <div class="table_wrap">
+              <table>
+                <colgroup>
+                  <col class="col3">
+                  <col>
+                  <col class="col3">
+                  <col>
+                </colgroup>
+                <tbody>
+                  <tr>
+                    <th scope="row">주소</th>
+                    <td colspan="3">(139200) 노원구 상계동 125</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">전화</th>
+                    <td>02)2289-6855</td>
+                    <th scope="row">운영시간</th>
+                    <td>06:00 ~ 22:00</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">면적</th>
+                    <td colspan="3">층수 : 지상 연면적:8832㎡</td>
+                    <!--<th scope="row">주차장</th>
+                    <td>248대</td>-->
+                  </tr>
+                  <tr>
+                    <th scope="row">주요시설</th>
+                    <td colspan="3">조명탑, 관람석</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- //table_wrap -->
+            <div class="btn_area">
+              <a href="https://reservation.nowonsc.kr/sports/reserve_date?cate1=7&amp;cate2=115" class="btn">대관신청</a>
+              <a href="https://reservation.nowonsc.kr/sports/reserve_state?cate1=7&amp;cate2=115" class="btn ">대관현황</a>
+              <a href="https://reservation.nowonsc.kr/sports/soccer_use?cate1=7&amp;cate2=21" class="btn">이용안내</a>
+            </div>
+          </div>
+        </div>
+      
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
