교내 장소 사용 신청 추가

--- a/views/read_match.html
+++ b/views/read_match.html
@@ -59,15 +59,16 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/match" style="font-size: 1.5em;">매치 </a>
+            <a href="/match" style="font-size: 1.5em;">매치</a>
           </li>
           <br>
           <li><a href="/match" class="underline-on">전체 매치</a></li>
           <li><a href="/match/write">매치 게시물 작성</a></li>
           <li><a href="/info/stadium">경기장 정보</a></li>
+          <li><a href="https://klas.kw.ac.kr/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do">교내장소 사용신청</a></li>
         </ul>
       </div>
-      <hr class="my-4" style="height: 3px; background-color: #006f3e; ">
+      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
       
     <!--매치글 조회-->
     <div class="container" style="margin: 0 auto; width: 65%;">
