--- a/views/stadium_tennis.html
+++ b/views/stadium_tennis.html
@@ -138,18 +138,19 @@
 
     <!--사이드바 -->
     <div id="page-wrapper">
-      <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-          <li class="sidebar-brand">
-            <a href="/match" style="font-size: 1.5em;">매치</a>
-          </li>
-          <br>
-          <li><a href="/match">전체 매치</a></li>
-          <li><a href="/match/write">매치 게시물 작성</a></li>
-          <li><a href="/info/stadium" class="underline-on">경기장 정보</a></li>
-        </ul>
-      </div>
-      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
+        <div id="sidebar-wrapper">
+          <ul class="sidebar-nav">
+            <li class="sidebar-brand">
+              <a href="/match" style="font-size: 1.5em;">매치</a>
+            </li>
+            <br>
+            <li><a href="/match">전체 매치</a></li>
+            <li><a href="/match/write">매치 게시물 작성</a></li>
+            <li><a href="/info/stadium" class="underline-on">경기장 정보</a></li>
+            <li><a href="https://klas.kw.ac.kr/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do">교내장소 사용신청</a></li>
+          </ul>
+        </div>
+        <hr class="my-4" style="height: 3px; background-color: #006f3e;">
       <br>
       <br>
       <div class="category">
