--- a/views/write_match.html
+++ b/views/write_match.html
@@ -64,12 +64,12 @@
         </li>
         <br>
         <li><a href="/match">전체 매치</a></li>
-        <li><a href="/match/write" class="underline-on">매치 게시물 작성</a></li>
+        <li><a href="/match/write"  class="underline-on">매치 게시물 작성</a></li>
         <li><a href="/info/stadium">경기장 정보</a></li>
+        <li><a href="https://klas.kw.ac.kr/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do">교내장소 사용신청</a></li>
       </ul>
     </div>
     <hr class="my-4" style="height: 3px; background-color: #006f3e;">
-
   <div class="container">
     <div class="header">
       <h2 class="text-center mt-5 fw-bold ">매치글 작성</h2>
