--- a/views/stadium_baseball.html
+++ b/views/stadium_baseball.html
@@ -147,6 +147,7 @@
           <li><a href="/match">전체 매치</a></li>
           <li><a href="/match/write">매치 게시물 작성</a></li>
           <li><a href="/info/stadium" class="underline-on">경기장 정보</a></li>
+          <li><a href="https://klas.kw.ac.kr/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do">교내장소 사용신청</a></li>
         </ul>
       </div>
       <hr class="my-4" style="height: 3px; background-color: #006f3e;">
