--- a/views/faq.html
+++ b/views/faq.html
@@ -83,7 +83,7 @@
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">저희 '팡팡' 서비스는 따로 스포츠 종목이라면 무엇이든 가능합니다!<br>경기장 정보에 대한 추가가 필요하시다면,Q%A 게시판을 통해 건의사항을 남겨주시면 보다 더 좋은 서비스를 위해 개선하겠습니다.</div>
+            <div class="accordion-body">저희 '팡팡' 서비스는 따로 스포츠 종목이라면 무엇이든 가능합니다!<br>경기장 정보에 대한 추가가 필요하시다면, Q&A 게시판을 통해 건의사항을 남겨주시면 보다 더 좋은 서비스를 위해 개선하겠습니다.</div>
           </div>
         </div>
         <div class="accordion-item">
