--- a/views/edit_match.html
+++ b/views/edit_match.html
@@ -8,6 +8,21 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
   <title>PangPang</title>
+  <script>      
+    fetch('/navbar')
+          .then(response => response.text())
+          .then(data => {
+              document.getElementById("content").innerHTML = data;
+              // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
+              const token = sessionStorage.getItem('토큰');
+              if (token) {
+                  document.getElementById("logoutButton").style.display = "block";
+              } else {
+                  document.getElementById("logoutButton").style.display = "none";
+              }
+          })
+          .catch(error => console.error('Error:', error));
+  </script>
 </head>
 <body>
   <!-- 네비게이션바 -->
@@ -52,11 +67,11 @@
               <div class="row mb-3">
                 <label for="state" class="col-sm-2 col-form-label">모집 상태</label>
                 <div class="col-sm-10">
-                    <input class="btn-check" type="radio" name="state" id="ing" value="ing" required/>
-                    <label class="btn btn-outline-success" for="ing">모집중</label>
+                    <input class="btn-check" type="radio" name="state" id="모집중" value="모집중" required/>
+                    <label class="btn btn-outline-success" for="모집중">모집중</label>
 
-                    <input class="btn-check" type="radio" name="state" id="end" value="end" required />
-                    <label class="btn btn-outline-success" for="end">모집완료</label>
+                    <input class="btn-check" type="radio" name="state" id="모집완료" value="모집완료" required />
+                    <label class="btn btn-outline-success" for="모집완료">모집완료</label>
                 </div>
               </div>
               <div class="row mb-3">
@@ -68,7 +83,7 @@
               <div class="row mb-3">
                 <label for="matchDate" class="col-sm-2 col-form-label">매치 날짜</label>
                 <div class="col-sm-10">
-                    <input type="datetime-local" class="form-control" id="matchDate" name="matchDate" value="{{ formatDate(match.matchDate) }}" required />
+                    <input type="datetime-local" class="form-control" id="matchDate" name="matchDate" value="{{match.matchDate}}" required />
                 </div>
               </div>
               <div class="row mb-3">
@@ -120,36 +135,16 @@
           </div>
 
         <script>
-        console.log(document.getElementById('state').value);
-        function formatDate(dateString) {
-            const date = new Date(dateString);
-            const year = date.getFullYear();
-            const month = (date.getMonth() + 1).toString().padStart(2, '0');
-            const day = date.getDate().toString().padStart(2, '0');
-            const hours = date.getHours().toString().padStart(2, '0');
-            const minutes = date.getMinutes().toString().padStart(2, '0');
-            return `${year}-${month}-${day}T${hours}:${minutes}`;
-        }
+        
         document.addEventListener('DOMContentLoaded', function () {
             // DB에 저장된 성별 정보
             const dbGender = "{{match.gender}}";
             const dbState = "{{match.state}}";
+            
+            console.log("dbGender:", dbGender);
+            console.log("dbState:", dbState);
 
             setGenderRadio(dbGender);
-            // 네비게이션바 로딩
-            fetch('/navbar')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById("content").innerHTML = data;
-                    const token = sessionStorage.getItem('토큰');
-                    if (token) {
-                        document.getElementById("logoutButton").style.display = "block";
-                    } else {
-                        document.getElementById("logoutButton").style.display = "none";
-                    }
-                })
-                .catch(error => console.error('Error:', error));
-
             setStateRadio(dbState);
 
 
@@ -189,7 +184,7 @@
                 })
                 .catch(error => console.error('Error updating match:', error));
             });
-        });
+        
         function setGenderRadio(dbGender) {
             const radioButtons = document.querySelectorAll('input[name="gender"].btn-check');
 
@@ -201,17 +196,20 @@
                 }
             });
         }
+      
+
         function setStateRadio(dbState) {
             const radioButtons = document.querySelectorAll('input[name="state"].btn-check');
 
             // nodeList를 배열로 변환 후 forEach 사용
             Array.from(radioButtons).forEach(function (button) {
-            // 각 라디오 버튼의 value 값과 DB에서 받아온 state 값을 비교하여 체크 상태 설정
-            if (button.value === dbState) {
-                button.checked = true;
-            }
+                // 각 라디오 버튼의 value 값과 DB에서 받아온 state 값을 비교하여 체크 상태 설정
+                if (button.value === dbState) {
+                    button.checked = true;
+                }
             });
         }
+    });
         </script>
   </body>
 </html>
