--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
 
     <div class="row mt-5"></div> <!--여백-->
 
-    <div class="container-fluid px-5 mt-7">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 px-4 mb-4"> 
                 <div class="card">
@@ -126,6 +126,7 @@
                 </div>
             </div>
         </div>
+    </div>
     
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
         
